--- a/templates/mentor_admin/progress_report.html
+++ b/templates/mentor_admin/progress_report.html
@@ -1,4 +1,5 @@
 {% extends 'mentor_admin/admin_base.html' %}
+{% load custom_filters %}
 {% load static %}
 
 {% block title %}Admin Progress Report{% endblock %}
@@ -61,10 +62,11 @@
 
 <div class="admin-progress-report">
     <h1>Admin Progress Report</h1>
+    
     {% for mentor in mentor_data %}
     
     <div class="mentor-section">
-        <h2>{{ mentor.mentor.username }}</h2>
+        <h2>{{ mentor.mentor.username|replace_underscore }}</h2>
         
         <div class="chart-container">
             <div class="chart-box">
